added loging and persisting token

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /API/.vs/API/FileContentIndex/646f4c0a-de28-404a-b5a6-9a60d36af99d.vsidx
 /API/.vs/API/FileContentIndex/69dc7d9a-acb7-4cf7-aff8-1791dc6a50c2.vsidx
 /API/.vs/API/FileContentIndex/fb23d2ee-83bb-4fbd-9c87-ada2397d7661.vsidx
+/API/.vs/API/
+/API/obj/
