--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,6 +8,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "WriteTo": [
+      {"Name": "Console"},
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/logs-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
+  },
   "AllowedHosts": "*",
   "TokenKey": "super secret 64 char key loooooooooooooooooooooooooooooooooooong"
 }
