--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,6 @@ jobs:
         with:
           dotnet-version: 8.0.x
       - name: Build
-        run: dotnet builde --no-restore
+        run: dotnet build --no-restore
       - name: Test
         run: dotnet test
