--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,7 @@ jobs:
         uses: actions/setup-dotnet@v4.0.1
         with:
           dotnet-version: 8.0.x
-      - name: Change Dir
-        run: cd API
       - name: Build
-        run: dotnet build API.csproj --no-restore
+        run: dotnet build API/API.csproj --no-restore
       - name: Test
         run: dotnet test
