--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Build
         run: dotnet build API/API.csproj
       - name: Test
-        run: dotnet test
+        run: dotnet test Tests/Tests.csproj
