added dockerfiles and dockercompose

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=FitnessApp;Trusted_Connection=True;"
+    "DefaultConnection": "Server=docker_sqlserver, 1433; Database=FitnessApp; User Id=sa; Password=myPassword1!; TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -11,7 +11,7 @@
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "WriteTo": [
-      {"Name": "Console"},
+      { "Name": "Console" },
       {
         "Name": "File",
         "Args": {
