--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -1,17 +1,16 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
-WORKDIR /App
+WORKDIR /App/API
 
-COPY API/API.csproj ./API/
+COPY API.csproj .
 
-RUN dotnet restore API/API.csproj
+RUN dotnet restore API.csproj
 
-COPY API/ ./API/
+COPY . .
 
-RUN dotnet publish API/API.csproj -c Release -o out
+RUN dotnet publish API.csproj -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 
-WORKDIR /App
 EXPOSE 8080
 COPY --from=build-env /App/out ./
 ENTRYPOINT ["dotnet", "API.dll"]
