--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^12.0.0"
+  },
+  "devDependencies": {
+    "@angular/cli": "^18.2.10"
   }
 }
