--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=docker_sqlserver, 1433; Database=FitnessApp; User Id=sa; Password=myPassword1!; TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost, 1433; Database=FitnessApp; User Id=sa; Password=myPassword1!; TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
