--- a/client/package.json
+++ b/client/package.json
@@ -20,11 +20,13 @@
     "@angular/router": "^17.3.0",
     "@auth0/angular-jwt": "^5.2.0",
     "@microsoft/signalr": "^8.0.7",
+    "@stripe/stripe-js": "^5.2.0",
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^4.0.0",
     "ngx-bootstrap": "^12.0.0",
     "ngx-spinner": "^17.0.0",
+    "ngx-stripe": "^19.0.0",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
